--- a/public/index.html
+++ b/public/index.html
@@ -18,79 +18,16 @@ window.addEventListener("DOMContentLoaded", () => {
 <meta charset="UTF-8">
 <title>Lincoln's Proxy</title>
 <style>
-body {
-  margin:0;
-  font-family:"Segoe UI",Arial,sans-serif;
-  display:flex;
-  flex-direction:column;
-  height:100vh;
-  background:#121212;
-  color:#fff;
-}
-#tabs {
-  display:flex;
-  background:#1a1a1a;
-  border-bottom:1px solid #333;
-  overflow-x:auto;
-  white-space:nowrap;
-  padding-left:4px;
-}
-.tab {
-  padding:8px 20px;
-  background:#2b2b2b;
-  color:#ccc;
-  cursor:pointer;
-  border-radius:20px 20px 0 0;
-  margin-right:4px;
-  display:flex;
-  align-items:center;
-  position:relative;
-}
-.tab.active {
-  background:#121212;
-  color:#fff;
-  font-weight:bold;
-}
-#toolbar {
-  display:flex;
-  align-items:center;
-  padding:6px;
-  background:#1e1e1e;
-  border-bottom:1px solid #333;
-}
-#search {
-  flex:1;
-  padding:8px 12px;
-  font-size:14px;
-  border:none;
-  border-radius:20px;
-  background:#2c2c2c;
-  color:#fff;
-  outline:none;
-}
-#goBtn,#newTabBtn {
-  margin-left:6px;
-  padding:8px 14px;
-  font-size:14px;
-  border:none;
-  border-radius:4px;
-  background:#333;
-  color:#fff;
-  cursor:pointer;
-}
-#goBtn:hover,#newTabBtn:hover {
-  background:#444;
-}
-#view {
-  flex:1;
-  position:relative;
-  background:#000;
-}
-iframe {
-  width:100%;
-  height:100%;
-  border:none;
-}
+body { margin:0; font-family:"Segoe UI",Arial,sans-serif; display:flex; flex-direction:column; height:100vh; background:#121212; color:#fff; }
+#tabs { display:flex; background:#1a1a1a; border-bottom:1px solid #333; overflow-x:auto; white-space:nowrap; padding-left:4px; }
+.tab { padding:8px 20px; background:#2b2b2b; color:#ccc; cursor:pointer; border-radius:20px 20px 0 0; margin-right:4px; display:flex; align-items:center; position:relative; }
+.tab.active { background:#121212; color:#fff; font-weight:bold; }
+#toolbar { display:flex; align-items:center; padding:6px; background:#1e1e1e; border-bottom:1px solid #333; }
+#search { flex:1; padding:8px 12px; font-size:14px; border:none; border-radius:20px; background:#2c2c2c; color:#fff; outline:none; }
+#goBtn,#newTabBtn { margin-left:6px; padding:8px 14px; font-size:14px; border:none; border-radius:4px; background:#333; color:#fff; cursor:pointer; }
+#goBtn:hover,#newTabBtn:hover { background:#444; }
+#view { flex:1; position:relative; background:#000; }
+iframe { width:100%; height:100%; border:none; }
 </style>
 </head>
 <body>
@@ -105,6 +42,7 @@ iframe {
 const PROXY_BASE = "https://prox-khzr.onrender.com/proxy?url=";
 const tabs = [];
 let activeTab = null;
+
 function createTab(url){
   const id = Date.now();
   const iframe = document.createElement("iframe");
@@ -130,6 +68,7 @@ function createTab(url){
   tabs.push({id,iframe,tabBtn,url});
   iframe.style.display="block";
 }
+
 document.getElementById("newTabBtn").onclick = () => { createTab("https://www.google.com"); };
 document.getElementById("goBtn").onclick = () => {
   const val = document.getElementById("search").value;
@@ -141,12 +80,10 @@ createTab("https://www.google.com");
 </html>
 `;
 
+  // Just open the new window with your proxy browser
   newWin.document.open();
   newWin.document.write(html);
   newWin.document.close();
-
-  // Close original page
-  setTimeout(()=>{ window.open('', '_self'); window.close(); }, 100);
 });
 </script>
 
